updated site files

--- a/contact.html
+++ b/contact.html
@@ -58,9 +58,14 @@
        </div>
      </div>
    </div>
-   
-   <div class="footer"><p>Copyright 2019</p>
-   </div>
+   <div class="row">
+      <div class="col-md-12">
+        <div class="text-center">
+          <p>Copyright 2019</p>
+        </div>
+      </div>
+    </div>
+
  
 
 
