--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
               <h1>About Me</h1>
             </div>
             <div class="row">
-              <div class="col-md-2">
-                <img src="../bootstrap-portfolio/assets/images/profile.jpeg" alt="Profile Picture">
+              <div class="col-md-3">
+                <img src="../bootstrap-portfolio2/assets/images/ancient-architecture-art-931317.jpeg" alt="Profile Picture" width="235px">
               </div>
-              <div class="col-md-10">
+              <div class="col-md-9">
                 <p class="text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, aspernatur. 
                   Consectetur soluta debitis dolorem veritatis dicta quisquam in tempore qui recusandae explicabo! Consequatur, eligendi? 
                   Asperiores facilis ullam tenetur molestias ducimus? Lorem ipsum, dolor sit amet consectetur adipisicing elit.
@@ -53,10 +53,14 @@
           </div>
         </div>
       </div>
-    <div class="footer"><p>Copyright 2019</p>
-    </div>
-
-  
+      <div class="row">
+          <div class="col-md-12">
+            <div class="text-center">
+              <p>Copyright 2019</p>
+            </div>
+          </div>
+        </div>
+    
   
 
 
